# DeepCode

./: .gitignore  CITATION.cff  CONTRIBUTING.md  Cargo.toml  LICENSE-MIT  POEM.md  README.md  benchmarks.toml
crates/deepcl/: Cargo.toml
crates/deepcl-attention/: Cargo.toml  README.md
crates/deepcl-attention/src/: base.rs
crates/deepcl-attention/src/components/: args.rs  error.rs  line_size.rs  mask.rs  spec.rs  tiling_scheme.rs
crates/deepcl-attention/src/kernels/: algorithm.rs  dummy.rs
crates/deepcl-attention/src/tests/: attention_test_launcher.rs  test_utils.rs
crates/deepcl-convolution/: Cargo.toml  README.md
crates/deepcl-convolution/src/: launch.rs
crates/deepcl-convolution/src/components/: config.rs  error.rs  mod.rs  problem.rs  selection.rs
crates/deepcl-convolution/src/tests/: convolution_test_launcher.rs  test_utils.rs
crates/deepcl-core/: Cargo.toml
crates/deepcl-core/src/: id.rs  io.rs  lib.rs  pod.rs  prelude.rs  runtime.rs
crates/deepcl-core/src/codegen/: compiler.rs  integrator.rs  metadata.rs
crates/deepcl-core/src/compute/: builder.rs  kernel.rs  launcher.rs
crates/deepcl-core/src/frontend/: barrier.rs  branch.rs  cmma.rs  comment.rs  comptime_error.rs  const_expand.rs  debug.rs  indexation.rs  list.rs  plane.rs  polyfills.rs  synchronization.rs  topology.rs
crates/deepcl-core/src/post_processing/: checked_io.rs  predicate.rs  saturating.rs  unroll.rs
crates/deepcl-core/src/runtime_tests/: assign.rs  atomic.rs  barrier.rs  binary.rs  branch.rs  cluster.rs  cmma.rs  comparison.rs  const_match.rs  constants.rs  debug.rs  different_rank.rs  enums.rs  index.rs  launch.rs  line.rs  metadata.rs  minifloat.rs  mod.rs  plane.rs  saturating.rs  sequence.rs  slice.rs  stream.rs  synchronization.rs  tensor.rs  tensormap.rs  to_client.rs  topology.rs  traits.rs  unary.rs  unroll.rs
crates/deepcl-core/tests/error/: array_variable.rs
crates/deepcl-cpp/: Cargo.toml
crates/deepcl-cpp/src/cuda/: dialect.rs  processors.rs
crates/deepcl-cpp/src/hip/: dialect.rs  processors.rs
crates/deepcl-cpp/src/metal/: address_space.rs  binding.rs  dialect.rs
crates/deepcl-cpp/src/shared/: barrier.rs  base.rs  dialect.rs  element.rs  kernel.rs  mma.rs  variable.rs
crates/deepcl-cpu/: Cargo.toml
crates/deepcl-cpu/src/: device.rs  lib.rs  runtime.rs
crates/deepcl-cpu/src/compiler/: builtin.rs  memref.rs  mlir_data.rs  mlir_engine.rs  mod.rs  module.rs
crates/deepcl-cpu/src/compute/: alloc_controller.rs  compute_task.rs  scheduler.rs  server.rs
crates/deepcl-cuda/: Cargo.toml
crates/deepcl-cuda/src/: device.rs  lib.rs  runtime.rs
crates/deepcl-cuda/src/compute/: command.rs  context.rs  server.rs  stream.rs
crates/deepcl-hip/: Cargo.toml  README.md
crates/deepcl-hip/src/: device.rs  lib.rs  runtime.rs
crates/deepcl-hip/src/compute/: command.rs  context.rs  fence.rs  server.rs  stream.rs
crates/deepcl-ir/: Cargo.toml  README.md
crates/deepcl-ir/src/: allocator.rs  lib.rs  operation.rs  type.rs  variable.rs
crates/deepcl-macros/: Cargo.toml  build.rs
crates/deepcl-macros-internal/: Cargo.toml  README.md
crates/deepcl-macros/src/: expression.rs  lib.rs  paths.rs
crates/deepcl-macros/src/generate/: expression.rs
crates/deepcl-matmul/: Cargo.toml  README.md
crates/deepcl-matmul/src/: base.rs  tune_key.rs
crates/deepcl-matmul/src/components/: error.rs  line_size.rs  problem.rs  resource.rs  size.rs  spec.rs
crates/deepcl-matmul/src/kernels/: naive.rs
crates/deepcl-matmul/src/tests/: test_utils.rs
crates/deepcl-opt/: Cargo.toml
crates/deepcl-opt/src/: block.rs  control_flow.rs  debug.rs  instructions.rs  lib.rs  phi_frontiers.rs  transformers.rs  version.rs
crates/deepcl-opt/src/analyses/: integer_range.rs  liveness.rs  uniformity.rs  (+1 more)
crates/deepcl-quant/: Cargo.toml
crates/deepcl-quant/src/: dequantize.rs  quantize.rs  scheme.rs  tests.rs
crates/deepcl-random/: Cargo.toml
crates/deepcl-random/src/: base.rs  bernoulli.rs  normal.rs  tests_utils.rs  uniform.rs
crates/deepcl-reduce/: Cargo.toml
crates/deepcl-reduce/src/: args.rs  config.rs  error.rs  launch.rs  lib.rs  precision.rs  primitives.rs  shared_sum.rs  strategy.rs  test.rs  tune_key.rs
crates/deepcl-spirv/: Cargo.toml  README.md
crates/deepcl-spirv/src/: arithmetic.rs  atomic.rs  bitwise.rs  branch.rs  cmma.rs  compiler.rs  debug.rs  globals.rs  instruction.rs  item.rs  lib.rs  lookups.rs  metadata.rs  subgroup.rs  sync.rs  target.rs  transformers.rs  variable.rs
crates/deepcl-std/: Cargo.toml
crates/deepcl-std/src/: fast_math.rs  lib.rs  option.rs  reinterpret_slice.rs
crates/deepcl-wgpu/: Cargo.toml  README.md  build.rs
crates/deepcl-wgpu/src/: device.rs  lib.rs  runtime.rs
crates/deepcl/benches/: conv2d.rs  matmul.rs  memcpy_async.rs  unary.rs
crates/deepcl/src/: lib.rs
crates/deepcode-autodiff/: Cargo.toml  README.md
crates/deepcode-autodiff/src/: backend.rs  grads.rs  lib.rs  tensor.rs
crates/deepcode-candle/: Cargo.toml  README.md
crates/deepcode-candle/src/: backend.rs  element.rs  lib.rs  tensor.rs
crates/deepcode-collective/: Cargo.toml  README.md
crates/deepcode-collective/multinode-tests/: Cargo.toml  README.md
crates/deepcode-collective/src/: api.rs  config.rs
crates/deepcode-common/: Cargo.toml  README.md
crates/deepcode-common/src/: id.rs  lib.rs
crates/deepcode-communication/: Cargo.toml  README.md
crates/deepcode-communication/src/: base.rs  data_service.rs
crates/deepcode-core/: Cargo.toml  README.md
crates/deepcode-core/src/: config.rs  lib.rs  tensor.rs  vision.rs
crates/deepcode-core/tests/: test_derive_config.rs  test_derive_module.rs  test_derive_record.rs  test_record_resilience.rs
crates/deepcode-cpu/: Cargo.toml  README.md
crates/deepcode-cpu/src/: lib.rs
crates/deepcode-cubecl/: Cargo.toml  README.md
crates/deepcode-cubecl-fusion/: Cargo.toml  README.md
crates/deepcode-cubecl-fusion/src/: base.rs  tune.rs
crates/deepcode-cubecl/src/: backend.rs  element.rs  fusion.rs  lib.rs  tune_key.rs
crates/deepcode-cuda/: Cargo.toml  README.md
crates/deepcode-cuda/src/: lib.rs
(+1749 files in other folders)
