[workspace]
# Try
# require version 2 to avoid "feature" additiveness for dev-dependencies
# https://doc.rust-lang.org/cargo/reference/resolver.html#feature-resolver-version-2
resolver = "2"

members = [
    "crates/deepcl",
    "crates/deepcl-attention",
    "crates/deepcl-common",
    "crates/deepcl-convolution",
    "crates/deepcl-core",
    "crates/deepcl-cpp",
    "crates/deepcl-cpu",
    "crates/deepcl-cuda",
    "crates/deepcl-ir",
    "crates/deepcl-macros",
    "crates/deepcl-macros-internal",
    "crates/deepcl-matmul",
    "crates/deepcl-opt",
    "crates/deepcl-quant",
    "crates/deepcl-random",
    "crates/deepcl-reduce",
    "crates/deepcl-runtime",
    "crates/deepcl-spirv",
    "crates/deepcl-std",
    "crates/deepcl-wgpu",
    "xtask",
]

exclude = [
    "examples/notebook",
    "examples/raspberry-pi-pico",        # will cause xtask issues otherwise
    "crates/deepcode-import/model-checks/*", # exclude model checking crates from workspace
]

[workspace.package]
edition = "2024"
license = "MIT OR Apache-2.0"
readme = "README.md"
version = "0.7.0"

[workspace.lints.clippy]

[workspace.lints.rustdoc]
broken_intra_doc_links = "deny"
invalid_html_tags = "deny"

[workspace.dependencies]
atomic_float = "1"
axum = "0.8.5"
bytes = "1"
candle-core = { version = "0.9.1" }
clap = { version = "4.5.48", features = ["derive"] }
colored = "3.0.0"
console_error_panic_hook = "0.1.7"
const-random = "0.1"
csv = "1.3.1"
dashmap = "6.1.0"
data-encoding = { version = "2.9.0", default-features = false, features = [
    "alloc",
] }
encoding_rs = "0.8.33"
fake = "4.4.0"
flate2 = "1.1.4"
float-cmp = "0.10.0"
futures = "0.3"
futures-util = "0.3"
gix-tempfile = { version = "18.0.0", features = ["signals"] }
globwalk = "0.9.1"
hound = "3.5.1"
image = "0.25.8"
indicatif = "0.18.0"
js-sys = "0.3.77"
libm = "0.2.15"
log = { default-features = false, version = "0.4.28" }
planus = { version = "=1.1" }
polars = { version = "0.49.1", features = ["lazy"] }
pretty_assertions = "1.4.1"
protobuf = "3.7.2"
protobuf-codegen = "3.7.2"
r2d2 = "0.8.10"
r2d2_sqlite = "0.31.0"
rayon = "1.10.0"
regex = { version = "1.11.3", default-features = false, features = [
    "perf",
    "unicode",
] }
reqwest = { version = "0.12.23", default-features = false, features = [
    "rustls-tls",
] }
rmp-serde = "1.3.0"
rusqlite = "0.37.0"
rust-format = "0.3.4"
serde_bytes = { version = "0.11.18", default-features = false, features = [
    "alloc",
] } # alloc for no_std
serde_rusqlite = "0.40.0"
strum = { version = "0.27.2", features = ["derive"] }
tar = "0.4.44"
tokio = { version = "1.47.1", features = ["rt", "macros"] }
tokio-tungstenite = "0.28"
tokio-util = "0.7"
tracing-appender = "0.2.3"
tracing-core = "0.1.34"
tracing-subscriber = "0.3.20"
zip = "4.6.0"

# Persist related
memmap2 = { version = "0.9" }
safetensors = { version = "0.6.2", default-features = false }

# Async handling
futures-lite = { version = "2.6.1", default-features = false }

# Terminal UI
ratatui = "0.29.0"

# WGPU stuff
text_placeholder = "0.5.1"

bincode = { version = "2.0.1", features = [
    "alloc",
    "serde",
], default-features = false }

#
# The following packages disable the "std" feature for no_std compatibility
#
macerator = { version = "0.2.9" }
openblas-src = "0.10.12"
blas-src = { version = "0.11.1", default-features = false }
rand_distr = { version = "0.5.1", default-features = false }
serde = { version = "1.0.228", default-features = false, features = [
    "derive",
    "alloc",
] } # alloc is for no_std, derive is needed
serde_json = { version = "1.0.145", default-features = false }
uuid = { version = "1.18.0", default-features = false }

byteorder = { version = "1.5.0", default-features = false }
libc = "0.2.175"
nvml-wrapper = "0.11.0"
sysinfo = "0.36.1"
systemstat = "0.2.5"
tch = "0.1.0"
torch-sys = "0.1.0"                                        # matches what tch is using, required for lib detection

ahash = { version = "0.8.12", default-features = false }
portable-atomic = { version = "1.11.1" }
portable-atomic-util = { version = "0.2.4", features = ["alloc"] }
derive_more = { version = "0.99.18", features = ["not", "add", "mul", "add_assign", "mul_assign", "display"] }
derive-new = { version = "0.7.0", default-features = false }
cfg_aliases = "0.2.1"
bitflags = "2.9.0"
bon = "3.7.0"
variadics_please = "1.0.0"
fnv = "1.0.7"
tracy-client = "0.18.0"
toml = "0.8.19"
tracel-llvm = "20.1.4-5"
tracel-xtask = { version = "=2.1.10" }
cudarc = "0.17.3"
smallvec = "1.14.0"
ash = "0.38.0"
tracel-ash = "0.38.0"
rspirv = "0.12.0"
deepcl = { path = "crates/deepcl", default-features = false }
deepcl-common = { path = "crates/deepcl-common", default-features = false }
deepcl-quant = { path = "crates/deepcl-quant", default-features = false }

# no_std compatiblity
foldhash = { version = "0.1.2", default-features = false }
hashbrown = "0.15.5"
spin = { version = "0.10.0", features = ["mutex", "spin_mutex"] }

rand = { version = "0.9.2", default-features = false, features = [
    "std_rng",
] } # std_rng is for no_std

async-channel = "2.3"
dirs = "6.0.0"
embassy-time = { version = "0.4.0", default-features = false }
md5 = "0.8.0"
sanitize-filename = "0.6"
wasm-bindgen-futures = "0.4.45"
weak-table = "0.3"
web-time = "1.1.0"

# Testing
rstest = "0.25.0"
serial_test = "3.1.1"

bytemuck = "1.16.1"
float4 = "0.1"
float8 = { version = "0.4", default-features = false }
half = { version = "2.5", features = [
    "alloc",
    "num-traits",
    "serde",
], default-features = false }
num-traits = { version = "0.2.19", default-features = false, features = [
    "libm",
] } # libm is for no_std

cfg-if = "1.0.0"
darling = "0.21.0"
enumset = "1.1.10"
ident_case = "1"
paste = "1"
proc-macro2 = "1"
quote = "1"
syn = { version = "2", features = ["full", "extra-traits", "visit-mut"] }
thiserror = "2"