[package]
authors = ["Genna Wingert", "louisfd <louisfd94@gmail.com>"]
categories = ["science", "mathematics", "algorithms"]
description = "DeepCL Convolution Kernels Engine"
edition.workspace = true
keywords = []
license.workspace = true
name = "deepcl-convolution"
readme.workspace = true
repository = "https://github.com/kothagpt/deepcode/tree/main/crates/deepcl-convolution"
version.workspace = true

[features]
default = ["std", "deepcl-runtime/default", "deepcl-core/default"]
export_tests = ["pretty_assertions"]
std = ["deepcl-runtime/std", "deepcl-core/std"]

conv_tests = []

[dependencies]
bytemuck = { workspace = true }
deepcl-common = { path = "../deepcl-common", version = "0.1.0", default-features = false }
deepcl-core = { path = "../deepcl-core", version = "0.1.0", default-features = false }
deepcl-matmul = { path = "../deepcl-matmul", version = "0.1.0", default-features = false }
deepcl-runtime = { path = "../deepcl-runtime", version = "0.1.0", default-features = false }
deepcl-std = { path = "../deepcl-std", version = "0.1.0", default-features = false }
deepcl-reduce = { path = "../deepcl-reduce", version = "0.1.0", default-features = false }
deepcl-random = { path = "../deepcl-random", version = "0.1.0", default-features = false }
half = { workspace = true, features = ["bytemuck"] }
pretty_assertions = { workspace = true, optional = true }
serde = { workspace = true }

[dev-dependencies]
trybuild = "1"
