[package]
authors = ["Genna Wingert", "louisfd <louisfd94@gmail.com>"]
categories = ["science", "mathematics", "algorithms"]
description = "DeepCL Convolution Kernels Engine"
edition.workspace = true
keywords = []
license.workspace = true
name = "deepcl-convolution"
readme.workspace = true
repository = "https://github.com/kothagpt/deepcode/tree/main/crates/deepcl-convolution"
version.workspace = true

[features]
default = ["std", "deepcl-runtime/default", "deepcl-core/default"]
export_tests = ["pretty_assertions"]
std = ["deepcl-runtime/std", "deepcl-core/std"]

conv_tests = []

[dependencies]
bytemuck = { workspace = true }
deepcl-common = { path = "../deepcl-common", default-features = false }
deepcl-core = { path = "../deepcl-core", default-features = false }
deepcl-matmul = { path = "../deepcl-matmul", default-features = false }
deepcl-runtime = { path = "../deepcl-runtime", default-features = false }
deepcl-std = { path = "../deepcl-std", default-features = false }
deepcl-reduce = { path = "../deepcl-reduce", default-features = false }
deepcl-random = { path = "../deepcl-random", default-features = false }
half = { workspace = true, features = ["bytemuck"] }
pretty_assertions = { workspace = true, optional = true }
serde = { workspace = true }

[dev-dependencies]
trybuild = "1"
