[package]
authors = ["marcantoinem <marc-antoine.m@outlook.com>"]
categories = ["science"]
description = "CPU runtime for DeepCL"
edition.workspace = true
keywords = ["cpu"]
license.workspace = true
name = "deepcl-cpu"
readme.workspace = true
repository = "https://github.com/kothagpt/deepcode/tree/main/crates/deepcl-cpu"
version.workspace = true

[features]
mlir-dump = []
default = [
    "std",
    "deepcl-runtime/default",
    "deepcl-common/default",
    "deepcl-core/default",
]
std = ["deepcl-runtime/std", "deepcl-common/std", "deepcl-core/std"]
matmul_tests_unit = ["deepcl-matmul/matmul_tests_unit"]
matmul_tests_plane = ["deepcl-matmul/matmul_tests_plane"]
matmul_tests_vecmat = ["deepcl-matmul/matmul_tests_vecmat"]
matmul_tests_tma = ["deepcl-matmul/matmul_tests_tma"]
matmul_tests_double = ["deepcl-matmul/matmul_tests_double"]
matmul_tests_simple = ["deepcl-matmul/matmul_tests_simple"]
matmul_tests_ordered = ["deepcl-matmul/matmul_tests_ordered"]
matmul_tests_cyclic = ["deepcl-matmul/matmul_tests_cyclic"]
matmul_tests_strided = ["deepcl-matmul/matmul_tests_strided"]
matmul_tests_tilewise = ["deepcl-matmul/matmul_tests_tilewise"]
matmul_tests_hybrid = ["deepcl-matmul/matmul_tests_hybrid"]
matmul_tests_barrier = ["deepcl-matmul/matmul_tests_barrier"]
matmul_tests_specialized = ["deepcl-matmul/matmul_tests_specialized"]
matmul_tests_f16 = ["deepcl-matmul/matmul_tests_f16"]
matmul_tests_f32 = ["deepcl-matmul/matmul_tests_f32"]
matmul_tests_layouts = ["deepcl-matmul/matmul_tests_layouts"]
matmul_tests_alt_shapes = ["deepcl-matmul/matmul_tests_alt_shapes"]
matmul_tests_partition_buffering = [
    "deepcl-matmul/matmul_tests_partition_buffering",
]
matmul_tests_hypercube = ["deepcl-matmul/matmul_tests_hypercube"]
matmul_tests_base = [
    "matmul_tests_plane",
    "matmul_tests_vecmat",
    "matmul_tests_double",
    "matmul_tests_simple",
    "matmul_tests_ordered",
    "matmul_tests_cyclic",
    "matmul_tests_f16",
]
matmul_tests_all = [
    "matmul_tests_unit",
    "matmul_tests_plane",
    "matmul_tests_vecmat",
    "matmul_tests_tma",
    "matmul_tests_double",
    "matmul_tests_simple",
    "matmul_tests_ordered",
    "matmul_tests_cyclic",
    "matmul_tests_strided",
    "matmul_tests_tilewise",
    "matmul_tests_hybrid",
    "matmul_tests_barrier",
    "matmul_tests_specialized",
    "matmul_tests_f16",
    "matmul_tests_f32",
    "matmul_tests_layouts",
    "matmul_tests_alt_shapes",
    "matmul_tests_partition_buffering",
    "matmul_tests_hypercube",
]
conv_tests = ["deepcl-convolution/conv_tests"]

[dependencies]
deepcl-common = { path = "../deepcl-common", version = "0.1.0", default-features = false }
deepcl-std = { path = "../deepcl-std", version = "0.1.0", default-features = false }
deepcl-core = { path = "../deepcl-core", version = "0.1.0", default-features = false }
deepcl-runtime = { path = "../deepcl-runtime", version = "0.1.0", default-features = false, features = [
    "channel-mutex",
] }
deepcl-opt = { path = "../deepcl-opt", version = "0.1.0", default-features = false }
deepcl-matmul = { path = "../deepcl-matmul", version = "0.1.0", features = [
    "export_tests",
] }
deepcl-convolution = { path = "../deepcl-convolution", version = "0.1.0", features = [
    "export_tests",
] }
deepcl-reduce = { path = "../deepcl-reduce", version = "0.1.0", features = [
    "export_tests",
] }

bytemuck = { workspace = true }
derive-new = { workspace = true }
half = { workspace = true }
log = { workspace = true }
serde = { workspace = true }
sysinfo = { workspace = true }
tracel-llvm = { workspace = true }

[dev-dependencies]
deepcl-core = { path = "../deepcl-core", version = "0.1.0", features = [
    "export_tests",
] }
deepcl-reduce = { path = "../deepcl-reduce", version = "0.1.0", features = [
    "export_tests",
] }
deepcl-random = { path = "../deepcl-random", version = "0.1.0", features = [
    "export_tests",
] }
deepcl-std = { path = "../deepcl-std", version = "0.1.0", features = [
    "export_tests",
] }
paste = { workspace = true }
pretty_assertions = { workspace = true }

[build-dependencies]
tracel-llvm-bundler = { version = "20.1.4-5"  }