[package]
authors = ["Md. Sulaiman <dev.sulaiman@icloud.com>"]
categories = ["science"]
description = "AMD ROCm HIP runtime for DeepCL"
edition.workspace = true
keywords = ["gpu", "amd", "rocm", "hip"]
license.workspace = true
name = "deepcl-hip"
readme.workspace = true
repository = "https://github.com/kothagpt/deepcode/tree/main/crates/deepcl-hip"
version.workspace = true

[features]
default = [
    "deepcl-runtime/default",
    "deepcl-common/default",
    "deepcl-core/default",
]
std = ["deepcl-runtime/std", "deepcl-common/std", "deepcl-core/std"]
rocwmma = []

matmul_tests_unit = ["deepcl-matmul/matmul_tests_unit"]
matmul_tests_plane = ["deepcl-matmul/matmul_tests_plane"]
matmul_tests_vecmat = ["deepcl-matmul/matmul_tests_vecmat"]
matmul_tests_tma = ["deepcl-matmul/matmul_tests_tma"]
matmul_tests_double = ["deepcl-matmul/matmul_tests_double"]
matmul_tests_simple = ["deepcl-matmul/matmul_tests_simple"]
matmul_tests_ordered = ["deepcl-matmul/matmul_tests_ordered"]
matmul_tests_cyclic = ["deepcl-matmul/matmul_tests_cyclic"]
matmul_tests_strided = ["deepcl-matmul/matmul_tests_strided"]
matmul_tests_tilewise = ["deepcl-matmul/matmul_tests_tilewise"]
matmul_tests_hybrid = ["deepcl-matmul/matmul_tests_hybrid"]
matmul_tests_barrier = ["deepcl-matmul/matmul_tests_barrier"]
matmul_tests_specialized = ["deepcl-matmul/matmul_tests_specialized"]
matmul_tests_f16 = ["deepcl-matmul/matmul_tests_f16"]
matmul_tests_f32 = ["deepcl-matmul/matmul_tests_f32"]
matmul_tests_layouts = ["deepcl-matmul/matmul_tests_layouts"]
matmul_tests_alt_shapes = ["deepcl-matmul/matmul_tests_alt_shapes"]
matmul_tests_partition_buffering = [
    "deepcl-matmul/matmul_tests_partition_buffering",
]
matmul_tests_hypercube = ["deepcl-matmul/matmul_tests_hypercube"]
matmul_tests_base = [
    "matmul_tests_plane",
    "matmul_tests_vecmat",
    "matmul_tests_double",
    "matmul_tests_simple",
    "matmul_tests_ordered",
    "matmul_tests_cyclic",
    "matmul_tests_f16",
]
matmul_tests_all = [
    "matmul_tests_unit",
    "matmul_tests_plane",
    "matmul_tests_vecmat",
    "matmul_tests_tma",
    "matmul_tests_double",
    "matmul_tests_simple",
    "matmul_tests_ordered",
    "matmul_tests_cyclic",
    "matmul_tests_strided",
    "matmul_tests_tilewise",
    "matmul_tests_hybrid",
    "matmul_tests_barrier",
    "matmul_tests_specialized",
    "matmul_tests_f16",
    "matmul_tests_f32",
    "matmul_tests_layouts",
    "matmul_tests_alt_shapes",
    "matmul_tests_partition_buffering",
    "matmul_tests_hypercube",
]
conv_tests = ["deepcl-convolution/conv_tests"]

[dependencies]
deepcl-common = { path = "../deepcl-common", features = [
    "cache",
] }
deepcl-core = { path = "../deepcl-core", default-features = false }
deepcl-cpp = { path = "../deepcl-cpp", default-features = false, features = [
    "hip",
] }
deepcl-runtime = { path = "../deepcl-runtime", default-features = false, features = [
    "channel-mutex",
] }
deepcl-quant = { path = "../deepcl-quant", default-features = false }

bytemuck = { workspace = true }

derive-new = { workspace = true }
half = { workspace = true }
log = { workspace = true }
paste = { workspace = true }
serde = { workspace = true }

[dev-dependencies]
deepcl-core = { path = "../deepcl-core", features = [
    "export_tests",
] }
deepcl-std = { path = "../deepcl-std", features = [
    "export_tests",
] }
deepcl-matmul = { path = "../deepcl-matmul", features = [
    "export_tests",
] }
deepcl-convolution = { path = "../deepcl-convolution", features = [
    "export_tests",
] }
deepcl-reduce = { path = "../deepcl-reduce", features = [
    "export_tests",
] }
deepcl-random = { path = "../deepcl-random", features = [
    "export_tests",
] }
deepcl-quant = { path = "../deepcl-quant", features = [
    "export_tests",
    "kernels",
] }
pretty_assertions = { workspace = true }
