[package]
authors = [
    "nathanielsimard <nathaniel.simard.42@gmail.com>",
    "louisfd <louisfd94@gmail.com",
]
categories = ["science"]
description = "Intermediate representation for DeepCL"
edition.workspace = true
keywords = []
license.workspace = true
name = "deepcl-ir"
readme.workspace = true
repository = "https://github.com/kothagpt/deepcode/tree/main/crates/deepcl-ir"
version.workspace = true


[features]
default = ["serde", "std"]

serde = ["dep:serde", "hashbrown/serde"]
std = []

[dependencies]
deepcl-common = { path = "../deepcl-common", version = "0.19", features = [
    "fp4",
    "fp8",
] }
deepcl-macros-internal = { path = "../deepcl-macros-internal", version = "0.19" }

derive-new = { workspace = true }
derive_more = { workspace = true, features = ["from"] }
float-ord = "0.3"
fnv = { workspace = true }
half = { workspace = true }
num-traits = { workspace = true }
serde = { workspace = true, optional = true, features = ["rc"] }
variadics_please = { workspace = true }

hashbrown = { workspace = true }
portable-atomic = { workspace = true }
