[package]
authors = [
    "Md. Sulaiman <dev.sulaiman@icloud.com>",
    "louisfd <louisfd94@gmail.com",
]
categories = ["science"]
description = "Internal procedural macros for DeepCL"
edition.workspace = true
keywords = []
license.workspace = true
name = "deepcl-macros-internal"
readme.workspace = true
repository = "https://github.com/kothagpt/deepcode/tree/main/crates/deepcl-macros-internal"
version.workspace = true

[lib]
proc-macro = true


[dependencies]
darling = { workspace = true }
proc-macro2 = { workspace = true }
quote = { workspace = true }
syn = { workspace = true }
