[package]
authors = ["Genna Wingert"]
categories = ["algorithms"]
description = "Compiler optimizations for DeepCL"
edition.workspace = true
keywords = ["gpu", "compiler"]
license.workspace = true
name = "deepcl-opt"
readme.workspace = true
repository = "https://github.com/kothagpt/deepcode/tree/main/crates/deepcl-opt"
version.workspace = true

[features]
default = ["std", "deepcl-common/default", "deepcl-ir/default"]
std = ["deepcl-common/std"]

[dependencies]
deepcl-common = { path = "../deepcl-common", default-features = false }
deepcl-ir = { path = "../deepcl-ir", default-features = false }
deepcl-core = { path = "../deepcl-core", default-features = false }

float-ord = "0.3"
log = "0.4"
num = "0.4"
petgraph = { version = "0.6" }
smallvec = { workspace = true }
stable-vec = { version = "0.4" }
type-map = { version = "0.5" }
